# tgBotTemplate

./: .gitignore  .gitmodules  Dockerfile  README.md  TODO.md  buttons.ini  config.ini  config.toml  config_env_mapping.toml  docker-compose.yml  docker-entrypoint.sh  messages.ini  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
bot/: __init__.py  your_bot_name.py
bot/config/: __init__.py
bot/handlers/: __init__.py  admin.py
bot/middlewares/: __init__.py  antiflood.py
bot/states/: __init__.py  admin.py
bot/storages/: __init__.py  base_storage.py  json_storage.py  pickle_storage.py  redis_storage.py
src/: app.py  async_app.py  threaded_app.py
src/async_bot/: __init__.py
src/async_bot/config/: __init__.py  models.py
src/async_bot/filters/: __init__.py
src/async_bot/handlers/: __init__.py  admin.py  base_handlers.py
src/async_bot/keyboards/: __init__.py  inline.py  reply.py
src/async_bot/middlewares/: __init__.py  antiflood.py  ban_checker.py
src/async_bot/states/: __init__.py  admin.py  user.py
src/bot/: __init__.py  your_bot_name.py
src/bot/config/: __init__.py  models.py
src/bot/filters/: __init__.py
src/bot/handlers/: __init__.py  admin.py  base_handlers.py
src/bot/keyboards/: __init__.py  inline.py  reply.py
src/bot/logger/: __init__.py
src/bot/middlewares/: __init__.py  ban_checker.py
src/bot/states/: __init__.py  user.py
src/config/: __init__.py  models.py
src/mybot/: __init__.py  cli.py  logger.py
src/mypackage/: __init__.py  logger.py
(+32 files in other folders)
