[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tgBotTemplate"
version = "0.0.1"
authors = [
    { name = "Konstantin Ostashenko", email = "zxe20jg1t@mozmail.com" },
]
description = "Telegram Bot Template"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "adaptix>=3.0.0a5",
    "pytelegrambotapi>=4.13.0",
    "redis>=5.0.0",
    "toml>=0.10.2; python_version < '3.11'"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]

[project.urls]
"Homepage" = "https://github.com/Cub11k/tgBotTemplate"

[project.scripts]
launch-polling = "mypackage:main"
